feat: add VD-even game and ruff linting

--- a/games_project_Hvezhenko/VD_games/Makefile
+++ b/games_project_Hvezhenko/VD_games/Makefile
@@ -1,7 +1,7 @@
 install:
 	uv sync
 
-brain-games:
+VD-games:
 	uv run VD-games
 
 build:
@@ -9,6 +9,3 @@ build:
 
 package-install:
 	uv tool install dist/*.whl
-
-lint:
-	uv run ruff check VD_games
