--- a/games_project_Hvezhenko/pyproject.toml
+++ b/games_project_Hvezhenko/pyproject.toml
@@ -22,6 +22,8 @@ dev = [
 
 [project.scripts]
 brain-games = "VD_games.scripts.VD_games:main"
-VD-even = "VD_games.scripts.VD_even:main"
 VD-calc = "VD_games.scripts.VD_calc:main"
 VD-gcd = "VD_games.scripts.VD_gcd:main"
+VD-even = "VD_games.scripts.VD_even:main"
+VD-progression = "VD_games.scripts.VD_progression:main"
+VD-prime = "VD_games.scripts.VD_prime:main"
